# mosek_example

./: CMakeLists.txt  main.cpp
